[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "moneynosleep"
version = "0.1.0"
description = "A-share review, screening, backtesting, and manual trade validation platform."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "akshare>=1.18",
    "baostock>=0.9.1",
    "duckdb>=0.10",
    "pandas>=2.0",
    "pyarrow>=15",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
    "streamlit>=1.34",
    "plotly>=5.20",
    "xtquant>=250516.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
qt = [
    "PySide6>=6.7",
]

[project.scripts]
mns = "mns.__main__:main"
mns-qt = "mns.qt_backtest.app:main"
mns-qt-local-data = "mns.qt_local_data.app:main"

[tool.setuptools.packages.find]
include = ["mns*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
